--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,39 @@
 * {
-  padding : 0;
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: Gilroy;
-
 }
-.main{
-  background: #EBF0F4;
+.main {
+  background: #ebf0f4;
   width: 100%;
   height: 100%;
   padding: 2% 5%;
 }
-@media (max-width: 420px) {
+@media (max-width: 380px) {
   .heading {
-    font-size: 24px;
+    font-size: 100%;
   }
-  
+
   .icon {
     width: 50%;
-    height:50%
+    height: 50%;
   }
 }
-.react-datepicker-wrapper{
+.react-datepicker-wrapper {
   width: 100%;
-  
 }
-.react-time-picker{
-  background:white
+.react-time-picker {
+  background: white;
 }
-.react-time-picker__wrapper{
+.react-time-picker__wrapper {
   border: none !important;
 }
-.react-time-picker__wrapper input{
+.react-time-picker__wrapper input {
   width: fit !important;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
